# ParticleSimulation

./: .gitignore  CMakeLists.txt  Electricity.cbp  Electricity.depend  Electricity.layout  README.md  README.txt  ValgrindOut.xml  build.sh  update_opt.txt
dependencies/include/imgui/: imconfig.h
src/: ChonkyTimer.hpp  app.cpp  app.h  debug.cpp  debug.h  main.cpp  particle  particle.h  physics_solver.cpp  physics_solver.h  tools.h
src/shaders/: test_shader.frag
